# LocalArchivesManager

./: .gitignore  AGENTS.md  AGENTS_backup0605_zh-CN.md  AGENT_E2E_REPORT.json  AGENT_E2E_REPORT.md  CHANGELOG.md  FROZEN_BUILD_REPORT.json  FROZEN_BUILD_REPORT.md  LICENSE  MANIFEST.in  README.md  RELEASE_TREE_AUDIT.md  RELEASE_TREE_MANIFEST.json  Workflows.md  pyproject.toml
LAM_tools/: .env.example  .gitignore  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml
LAM_tools/docs/: CLI_COMMANDS.md  DEVELOPMENT.md  INSTALL_SOURCE.md  TEST_CORPUS.md  TUTORIAL.md
LAM_tools/examples/test_corpus/: README.md  manifest.json  manifest.schema.json
LAM_tools/examples/test_corpus/expected/: README.md
LAM_tools/examples/test_corpus/reference_text/: refs1.txt  refs2.txt
LAM_tools/packaging/: README.md  entrypoint.py  lam.spec
LAM_tools/packaging/manifests/: easyocr-models.json  poppler-windows.json
LAM_tools/packaging/templates/: open-lam-terminal.bat  setup-lam.bat
LAM_tools/scripts/: build_onedir.ps1  fetch_test_corpus.py  generate_cli_docs.py  generate_test_corpus.py  prepare_release_assets.py  smoke_test_frozen.py  stage_onedir.ps1  sync_package_templates.py  verify_release_tree.py
LAM_tools/src/lam/: __init__.py  cli.py  command_registry.py  config.py  directory_policy.py  exceptions.py  models.py  release_docs.py  run_context.py  runtime_resources.py  schema.py  versions.py
LAM_tools/src/lam/http/: __init__.py  client.py  rate_limiter.py  retry.py
LAM_tools/src/lam/providers/: __init__.py  arxiv.py  base.py  common.py  crossref.py  pubmed.py  unavailable.py  unpaywall.py
LAM_tools/src/lam/services/: __init__.py  catalogue_preflight_service.py  catalogue_service.py  citation_export_service.py  document_analysis_service.py  download_service.py  download_validation_service.py  file_service.py  invocation_service.py  journal_service.py  matching_service.py  metadata_cache_service.py  metadata_merge_service.py  metadata_service.py  ocr_service.py  pdf_service.py  pdf_visual_service.py  record_canonicalization_service.py  reference_text_service.py  report_service.py  run_workspace.py  snapshot_service.py  supplementary_registration_service.py
LAM_tools/src/lam/utils/: __init__.py  candidate_cleaning.py  filename.py  hashing.py  identifiers.py  journal.py  local_pdf_metadata.py  normalize.py  publication_type.py  supplementary.py  text.py  title_matching.py  uncertainty.py
LAM_tools/src/lam/workflows/: __init__.py  catalogue_filing.py  citation_export.py  cleanup.py  command_audit.py  daily_check.py  doctor.py  document_migration.py  identifier_migration.py  inbox_register.py  library_init.py  metadata_query.py  migration.py  paper_delete.py  progressive_register.py  publication_type_repair.py  record_normalization.py  recovery.py  reference_import.py  review.py  schema_migration.py  status.py  topic_migration.py  trash_recovery.py
LAM_tools/tests/: conftest.py  test_bilingual_local_fallback_053.py  test_catalogue_filing.py  test_catalogue_filing_documents_051.py  test_catalogue_preflight_051.py  test_catalogue_service.py  test_citation_export_056.py  test_cleanup.py  test_cli.py  test_cli_055.py  test_cli_safety_054.py  test_composite_metadata_service.py  test_crossref_057.py  test_daily_check.py  test_daily_check_documents_051.py  test_directory_policy_050.py  test_doctor.py  test_document_analysis_058.py  test_document_migration_051.py  test_download_service.py  test_file_service.py  test_http_client.py  test_identifier_migration_052.py  test_identifiers.py  test_inbox_register.py  test_journal_service.py  test_live_download.py  test_live_providers.py  test_maintenance_documents_052.py  test_matching_service.py  test_metadata_cache_service.py  test_metadata_identity_052.py  test_metadata_merge_service.py  test_metadata_query.py  test_ocr_live.py  test_ocr_service.py  test_packaging_060.py  test_paper_delete_061.py  test_pdf_service.py  test_pdf_visual_057.py  (+19 more)
LAM_tools/tests/fixtures/: __init__.py
LAM_tools/tests/fixtures/legacy/: README.md  __init__.py  factory.py
LAM_tools/tests/fixtures/reference_text/: lookup_variants.txt  refs1.txt  refs2.txt
scripts/: search_literature.py
