[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lam-tools"
version = "0.3.2"
description = "Deterministic local maintenance tools for a biomedical literature library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "filelock>=3.13",
    "easyocr>=1.7",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "pypdf>=6.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lam = "lam.cli:main"

[tool.setuptools.packages.find]
where = ["LAM_tools/src"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider -m 'not live and not live_download and not ocr_live'"
testpaths = ["LAM_tools/tests"]
pythonpath = ["LAM_tools/src"]
markers = [
    "live: optional real-network provider integration tests",
    "live_download: optional real-network open-access PDF download test",
    "ocr_live: optional real Poppler and EasyOCR integration test",
]
