[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lam-tools"
version = "0.6.0"
description = "Deterministic local maintenance tools for a research literature library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7",
    "filelock>=3.13",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "opencv-python-headless>=4.10",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "pypdf>=6.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "torch>=2.4",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pyinstaller>=6.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
lam = "lam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider -m 'not live and not live_provider and not live_download and not ocr_live'"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: deterministic isolated unit tests",
    "integration: isolated multi-service integration tests",
    "regression: historical bug regression tests",
    "slow: tests with intentionally higher local runtime",
    "ocr: mocked or local OCR behavior tests",
    "windows: Windows-specific behavior tests",
    "live: optional real-network provider integration tests",
    "live_provider: optional real-network provider integration tests",
    "live_download: optional real-network open-access PDF download test",
    "ocr_live: optional real Poppler and EasyOCR integration test",
]
