[build-system]
requires = ["setuptools>=80,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "lam-tools"
version = "0.6.1"
description = "Deterministic local maintenance tools for a research literature library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14,<3.15"
dependencies = [
    "easyocr>=1.7,<2",
    "filelock>=3.13,<4",
    "httpx>=0.27,<1",
    "openpyxl>=3.1,<4",
    "opencv-python-headless>=4.10,<6",
    "pdf2image>=1.17,<2",
    "Pillow>=10.0,<13",
    "pypdf>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "rapidfuzz>=3.9,<4",
    "torch>=2.13,<3",
    "torchvision>=0.28,<0.29",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "pyinstaller>=6.21,<7",
    "pyinstaller-hooks-contrib>=2026.6,<2027",
    "pytest>=9,<10",
    "pytest-cov>=5,<8",
    "reportlab>=4,<5",
]

[project.scripts]
lam = "lam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lam" = ["resources/*.md"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider -m 'not live and not live_provider and not live_download and not ocr_live'"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: deterministic isolated unit tests",
    "integration: isolated multi-service integration tests",
    "regression: historical bug regression tests",
    "slow: tests with intentionally higher local runtime",
    "ocr: mocked or local OCR behavior tests",
    "windows: Windows-specific behavior tests",
    "live: optional real-network provider integration tests",
    "live_provider: optional real-network provider integration tests",
    "live_download: optional real-network open-access PDF download test",
    "ocr_live: optional real Poppler and EasyOCR integration test",
]
